<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DizzyPhone</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="settings_text">Settings</string>
    <string name="start_button">Start</string>
    <string name="dizzy_phone">Dizzy Phone</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_save_settings">Save Settings?</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_dont_save">Don\'t Save</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="main_menu">Main Menu</string>
    <string name="back_button">Back</string>
    <string name="player1">Player1</string>
    <string name="player_name">Player Name</string>
    <string name="game_speed">Game Speed</string>
    <string name="null_">null</string>
    <string name="high_score">High Score: </string>
    <string name="landscape">Landscape</string>
    <string name="im_there">I\'m There</string>
    <string name="lives">Lives:</string>
    <string name="score">Score:</string>
    <string name="title_activity_gameover">gameover</string>
    <string name="game_over">Game Over</string>

</resources>
