<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".menuscreenActivity"
    android:fitsSystemWindows="true"
    >

    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/dizzy_phone" />

    <Button android:id="@+id/start_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/start_button"
        android:layout_gravity="center_vertical"
        android:layout_centerInParent="true"
        android:onClick="sendGameActivity"
        />

    <Button android:id="@+id/settings_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/start_button"
        android:layout_weight="1"
        android:text="@string/settings_text"
        android:onClick="sendSettingsActivity"
        />

</RelativeLayout>
